@@ -1,10 +1,10 @@
 package io.github.alien.roseau.api.model;
 
 import com.google.common.base.Preconditions;
+import com.google.common.collect.Sets;
 import io.github.alien.roseau.api.model.reference.TypeReference;
 
 import java.lang.annotation.ElementType;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Objects;
@@ -13,37 +13,35 @@ import java.util.Set;
 /**
  * An annotation interface declaration (e.g., {@code public @interface Ann {}}).
  */
-public final class AnnotationDecl extends TypeDecl {
+public final class AnnotationDecl extends InterfaceDecl {
 	/**
 	 * The methods declared in this annotation, which correspond to annotation elements, possibly with a default value
 	 */
-	private final List<AnnotationMethodDecl> annotationMethods;
+	private final Set<AnnotationMethodDecl> annotationMethods;
 	/**
 	 * The {@link ElementType} this annotation can be used on
 	 */
 	private final Set<ElementType> targets;
 
 	public AnnotationDecl(String qualifiedName, AccessModifier visibility, Set<Modifier> modifiers,
-	                      List<Annotation> annotations, SourceLocation location, List<FieldDecl> fields,
-	                      List<AnnotationMethodDecl> annotationMethods, TypeReference<TypeDecl> enclosingType,
+	                      Set<Annotation> annotations, SourceLocation location, Set<FieldDecl> fields,
+	                      Set<AnnotationMethodDecl> annotationMethods, TypeReference<TypeDecl> enclosingType,
 	                      Set<ElementType> targets) {
-		super(qualifiedName, visibility, modifiers, annotations, location, Collections.emptyList(),
-			Collections.emptyList(), fields, Collections.emptyList(), enclosingType, List.of());
+		super(qualifiedName, visibility, modifiers, annotations, location, Set.of(),
+			List.of(), fields, Set.of(), enclosingType, Set.of());
 		Preconditions.checkNotNull(annotationMethods);
 		Preconditions.checkNotNull(targets);
-		this.annotationMethods = List.copyOf(annotationMethods);
+		this.annotationMethods = Set.copyOf(annotationMethods);
 		if (hasAnnotation(TypeReference.ANNOTATION_TARGET)) {
-			this.targets = Collections.unmodifiableSet(targets.isEmpty()
-				// If @Target({}), the annotation cannot be placed on anything (cf. @Target's javadoc)
-				? EnumSet.noneOf(ElementType.class)
-				: EnumSet.copyOf(targets));
+			// If @Target({}), the annotation cannot be placed on anything (cf. @Target's javadoc)
+			this.targets = Sets.immutableEnumSet(targets);
 		} else {
 			// §9.6.4.1: if no explicit @Target annotation, defaults to everything but TYPE_USE
-			this.targets = Collections.unmodifiableSet(EnumSet.complementOf(EnumSet.of(ElementType.TYPE_USE)));
+			this.targets = Sets.immutableEnumSet(EnumSet.complementOf(EnumSet.of(ElementType.TYPE_USE)));
 		}
 	}
 
-	public List<AnnotationMethodDecl> getAnnotationMethods() {
+	public Set<AnnotationMethodDecl> getAnnotationMethods() {
 		return annotationMethods;
 	}
 
@@ -74,9 +72,9 @@ public final class AnnotationDecl extends TypeDecl {
 		if (!super.equals(obj)) {
 			return false;
 		}
-		AnnotationDecl other = (AnnotationDecl) obj;
-		return Objects.equals(annotationMethods, other.annotationMethods) &&
-			Objects.equals(targets, other.targets);
+		return obj instanceof AnnotationDecl other
+			&& Objects.equals(annotationMethods, other.annotationMethods)
+			&& Objects.equals(targets, other.targets);
 	}
 
 	@Override
