@@ -1,11 +1,9 @@
 package io.github.alien.roseau.api.model;
 
 import com.google.common.base.Preconditions;
+import com.google.common.collect.Sets;
 import io.github.alien.roseau.api.model.reference.TypeReference;
 
-import java.util.Collections;
-import java.util.EnumSet;
-import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
@@ -38,7 +36,7 @@ public abstract sealed class Symbol permits TypeDecl, TypeMemberDecl {
 	/**
 	 * Annotations placed on the symbol (e.g., @Deprecated, @Beta)
 	 */
-	protected final List<Annotation> annotations;
+	protected final Set<Annotation> annotations;
 
 	/**
 	 * The exact physical location of the symbol in the source (e.g., /src/pkg/T.java:4)
@@ -51,7 +49,7 @@ public abstract sealed class Symbol permits TypeDecl, TypeMemberDecl {
 	protected final String simpleName;
 
 	protected Symbol(String qualifiedName, AccessModifier visibility, Set<Modifier> modifiers,
-	                 List<Annotation> annotations, SourceLocation location) {
+	                 Set<Annotation> annotations, SourceLocation location) {
 		Preconditions.checkNotNull(qualifiedName);
 		Preconditions.checkNotNull(visibility);
 		Preconditions.checkNotNull(modifiers);
@@ -59,12 +57,8 @@ public abstract sealed class Symbol permits TypeDecl, TypeMemberDecl {
 		Preconditions.checkNotNull(location);
 		this.qualifiedName = qualifiedName;
 		this.visibility = visibility;
-		// Yup, there's no simpler way to get an EnumSet implementation that's immutable
-		this.modifiers = Collections.unmodifiableSet(
-			modifiers.isEmpty()
-				? EnumSet.noneOf(Modifier.class)
-				: EnumSet.copyOf(modifiers));
-		this.annotations = List.copyOf(annotations);
+		this.modifiers = Sets.immutableEnumSet(modifiers);
+		this.annotations = Set.copyOf(annotations);
 		this.location = location;
 		simpleName = qualifiedName.substring(qualifiedName.lastIndexOf('.') + 1);
 	}
@@ -81,7 +75,7 @@ public abstract sealed class Symbol permits TypeDecl, TypeMemberDecl {
 		return modifiers;
 	}
 
-	public List<Annotation> getAnnotations() {
+	public Set<Annotation> getAnnotations() {
 		return annotations;
 	}
 
@@ -136,19 +130,15 @@ public abstract sealed class Symbol permits TypeDecl, TypeMemberDecl {
 		if (this == obj) {
 			return true;
 		}
-		if (obj == null || getClass() != obj.getClass()) {
-			return false;
-		}
-		Symbol other = (Symbol) obj;
-		return Objects.equals(qualifiedName, other.qualifiedName)
+		return obj instanceof Symbol other
+			&& Objects.equals(qualifiedName, other.qualifiedName)
 			&& visibility == other.visibility
 			&& Objects.equals(modifiers, other.modifiers)
-			&& Objects.equals(annotations, other.annotations)
-			&& Objects.equals(location, other.location);
+			&& Objects.equals(annotations, other.annotations);
 	}
 
 	@Override
 	public int hashCode() {
-		return Objects.hash(qualifiedName, visibility, modifiers, annotations, location);
+		return Objects.hash(qualifiedName, visibility, modifiers, annotations);
 	}
 }
